# gemma-holonomy-doe

./: .gitattributes  .gitignore  CLAUDE.md  ENVIRONMENT.md  PREREGISTRATION.md  PREREGISTRATION_v2.md  README.md  mkdocs.yml  pyproject.toml
bands/: __init__.py  support.py
corpus/: __init__.py  acquire.py  draw.py
covariates/: __init__.py  measure.py
docs/: index.md
extraction/: __init__.py  extract.py
geometry/: __init__.py  pullback.py
glossary/: __init__.py  build_glossary.py  glossary.yaml  topics.yaml
manifest/: __init__.py  schema.py
pilot/: __init__.py  tau_resid_post_pilot.json  tau_resid_post_pilot.md  tau_resid_post_pilot.py
planes/: __init__.py  construct.py
power/: power_hsem.py  power_hsem_results.md
reports/: area_law_layer13_validation.json  area_law_layer13_validation.md  center_displacement_diagnostic.json  center_displacement_diagnostic.md  compute_benchmark_layer13.json  compute_benchmark_layer13.md  displacement_gap_regression.json  displacement_gap_regression.md  full_shear_gap_environment_record.md  full_transport_shear_diagnostic.checkpoint.jsonl  full_transport_shear_diagnostic.json  full_transport_shear_diagnostic.md  guard_regression_exploratory.json  guard_regression_exploratory.md  harness_validation.md  hsem_results.json  hsem_results.md  integrity_receipt.json  post_freeze_environment_record.md  prereg_reconciliation.md  shear_gap_regression.json  shear_gap_regression.md  transport_shear_diagnostic.json  transport_shear_diagnostic.md
run/: corpus_draw_n390.json  corpus_draw_stage_pool.json  holonomy_results_n390.json  (+7 more)
(+189 files in other folders)
