[project]
name = "gemma-holonomy-doe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0",
    "huggingface-hub>=0.26",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "sae-lens>=6.0",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "torch>=2.5",
    "transformers>=4.46",
]

[tool.gemma-holonomy-doe.compute]
backend = "Apple Silicon / MPS"
reproducibility = "Bitwise reproducibility is claimed only within the Apple Silicon / MPS backend used for this study."

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: tests that load pinned external artifacts or full cached datasets",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
